<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <!-- Background Bagian Atas -->
    <include
        layout="@layout/bg_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Title -->
    <TextView
        android:id="@+id/tv_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:text="@string/login_welcome_message"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:lineSpacingExtra="7sp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tv_header_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_header_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_prompt_email"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <!-- Form Section -->

    <!-- Email Field -->
    <EditText
        android:layout_below="@id/tv_header_subtitle"
        android:layout_marginTop="150dp"
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="45dp"
        android:hint="@string/e_mail"
        android:textSize="14sp"
        android:padding="10dp"
        android:layout_marginBottom="12dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/text_input_border_color"
        android:elevation="2dp" />

    <!-- Password Field with Eye Icon -->
    <RelativeLayout
        android:id="@+id/password_container"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/text_input_border_color">

        <!-- EditText for Password -->
        <EditText
            android:background="@null"
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:hint="@string/password_hint"
            android:layout_toStartOf="@+id/eye_icon"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:elevation="2dp">
        </EditText>
        <ImageView
            android:id="@+id/eye_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"            android:layout_marginEnd="10dp"
            android:src="@drawable/eye_hid" />

        <!-- Eye Icon -->

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_password_resident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_container"
        android:layout_alignEnd="@+id/password_container"
        android:layout_marginTop="1dp"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="4dp" />


    <include
        android:layout_below="@+id/password_container"
        android:id="@+id/btn_login_masyarakat"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/button_orange">
    </include>

    <LinearLayout
        android:layout_below="@+id/btn_login_masyarakat"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_prompt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_signup_masyarakat"
            android:background="?attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:paddingStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_action"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
